--- a/pagamento_cartao_credito.html
+++ b/pagamento_cartao_credito.html
@@ -3,65 +3,67 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pagamento com Cartão de Crédito</title>
+  <title>Cartão de Crédito</title>
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom CSS -->
   <link href="./css/styles.css" rel="stylesheet">
   <link rel="shortcut icon" href="./image/camisa.gif" type="image/x-icon">
 </head>
-<body>
+<body class="bg-light" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">FootCoder</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm py-3">
+  <div class="container-fluid px-4">
+    <a class="navbar-brand fw-bold fs-4" href="#" style="letter-spacing: -1px;">Foot<span class="text-primary">Coder</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link fw-medium px-3" href="index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="produtos.html">Camisetas</a>
+          <a class="nav-link fw-medium px-3" href="produtos.html">Camisetas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="carrinho.html">Carrinho</a>
+          <a class="nav-link fw-medium px-3" href="carrinho.html">Carrinho</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Pagamento com Cartão de Crédito</a>
+          <a class="nav-link active fw-medium px-3" aria-current="page" href="#">Cartão de Crédito</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div class="container mt-4">
-  <h1 class="mb-4">Pagamento com Cartão de Crédito</h1>
+<div class="container mt-5 pt-5 pb-5">
+  <h1 class="fw-bold mb-4 text-dark text-center">Pagamento</h1>
   <div class="row">
-    <div class="col-lg-8 offset-lg-2">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Insira os dados do seu cartão de crédito</h5>
+    <div class="col-lg-6 offset-lg-3">
+      <div class="card border-0 shadow-lg" style="border-radius: 16px;">
+        <div class="card-body p-5">
+          <h5 class="card-title fw-bold mb-4 text-center">Dados do Cartão</h5>
           <form id="paymentForm">
             <div class="mb-3">
-              <label for="cardNumber" class="form-label">Número do Cartão</label>
-              <input type="text" class="form-control" id="cardNumber" placeholder="1234 5678 9012 3456" required>
+              <label for="cardNumber" class="form-label fw-semibold text-muted small">Número do Cartão</label>
+              <input type="text" class="form-control form-control-lg border-2" id="cardNumber" placeholder="1234 5678 9012 3456" required style="border-radius: 10px;">
             </div>
             <div class="mb-3">
-              <label for="cardName" class="form-label">Nome no Cartão</label>
-              <input type="text" class="form-control" id="cardName" placeholder="Nome Completo" required>
+              <label for="cardName" class="form-label fw-semibold text-muted small">Nome no Cartão</label>
+              <input type="text" class="form-control form-control-lg border-2" id="cardName" placeholder="NOME COMO ESTÁ NO CARTÃO" required style="border-radius: 10px;">
             </div>
-            <div class="mb-3">
-              <label for="expiryDate" class="form-label">Data de Validade</label>
-              <input type="text" class="form-control" id="expiryDate" placeholder="MM/AA" required>
+            <div class="row mb-4">
+              <div class="col-md-6 mb-3 mb-md-0">
+                <label for="expiryDate" class="form-label fw-semibold text-muted small">Validade</label>
+                <input type="text" class="form-control form-control-lg border-2" id="expiryDate" placeholder="MM/AA" required style="border-radius: 10px;">
+              </div>
+              <div class="col-md-6">
+                <label for="cvv" class="form-label fw-semibold text-muted small">CVV</label>
+                <input type="text" class="form-control form-control-lg border-2" id="cvv" placeholder="123" required style="border-radius: 10px;">
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="cvv" class="form-label">CVV</label>
-              <input type="text" class="form-control" id="cvv" placeholder="123" required>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Confirmar Pagamento</button>
+            <button type="submit" class="btn btn-primary btn-lg w-100 fw-bold py-3 shadow-sm rounded-3">Confirmar Pagamento</button>
           </form>
         </div>
       </div>
@@ -70,19 +72,19 @@
 </div>
 
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-  <div id="paymentToast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="d-flex">
-      <div class="toast-body">
-        Pagamento realizado com sucesso!
+  <div id="paymentToast" class="toast align-items-center text-white bg-success border-0 shadow-lg" role="alert" aria-live="assertive" aria-atomic="true" style="border-radius: 12px;">
+    <div class="d-flex p-2">
+      <div class="toast-body fw-bold">
+        ✅ Pagamento realizado com sucesso!
       </div>
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
   </div>
 </div>
 
-<footer class="footer mt-auto py-3">
+<footer class="bg-dark text-white py-5 mt-5">
   <div class="container text-center">
-    <span class="text-muted">© 2024 FootCoder</span>
+    <span class="text-secondary small">&copy; <script>document.write(new Date().getFullYear())</script> FootCoder. Todos os direitos reservados.</span>
   </div>
 </footer>
 
