feat: atualizar placeholder do campo 'Nome no Cartão' para 'NOME DO TITULAR'

--- a/pagamento_cartao_credito.html
+++ b/pagamento_cartao_credito.html
@@ -51,7 +51,7 @@
             </div>
             <div class="mb-3">
               <label for="cardName" class="form-label fw-semibold text-muted small">Nome no Cartão</label>
-              <input type="text" class="form-control form-control-lg border-2" id="cardName" placeholder="NOME COMO ESTÁ NO CARTÃO" required style="border-radius: 10px;">
+              <input type="text" class="form-control form-control-lg border-2" id="cardName" placeholder="NOME DO TITULAR" required style="border-radius: 10px;">
             </div>
             <div class="row mb-4">
               <div class="col-md-6 mb-3 mb-md-0">
