feat: implementação de seção hero, badges de confiança, contador dinâmico e refatoração do script

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 <header class="hero-section text-white d-flex align-items-center shadow-lg" style="height: 60vh; background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('https://images.unsplash.com/photo-1574629810360-7efbbe195018?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80') center/cover no-repeat; margin-top: 80px;">
   <div class="container text-center">
     <h1 class="display-3 fw-extrabold text-uppercase mb-3" style="letter-spacing: -2px;">Vista o seu <span class="text-primary">Manto</span></h1>
-    <p class="lead fw-bold mb-4 text-uppercase" style="letter-spacing: 2px;">Novas camisas da temporada 2024 disponíveis</p>
+    <p class="lead fw-bold mb-4 text-uppercase" style="letter-spacing: 2px;">Novas camisas da temporada <span class="auto-year"></span> disponíveis</p>
     <a href="#produtos" class="btn btn-primary btn-lg px-5 py-3 fw-bold rounded-pill text-uppercase shadow">Confira as Ofertas</a>
   </div>
 </header>
