--- a/pagamento_pix.html
+++ b/pagamento_pix.html
@@ -10,48 +10,48 @@
   <link href="./css/styles.css" rel="stylesheet">
   <link rel="shortcut icon" href="./image/camisa.gif" type="image/x-icon">
 </head>
-<body>
+<body class="bg-light d-flex flex-column min-vh-100" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">FootCoder</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm py-3" style="border-bottom: 3px solid #0d6efd;">
+  <div class="container-fluid px-4">
+    <a class="navbar-brand fw-bold fs-3 tracking-tight" href="index.html" style="letter-spacing: -1.5px; text-transform: uppercase;">Foot<span class="text-primary">Coder</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link fw-bold px-3 text-uppercase" href="index.html" style="font-size: 0.9rem;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="produtos.html">Camisetas</a>
+          <a class="nav-link fw-bold px-3 text-uppercase" href="produtos.html" style="font-size: 0.9rem;">Camisetas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="carrinho.html">Carrinho</a>
+          <a class="nav-link fw-bold px-3 text-uppercase" href="carrinho.html" style="font-size: 0.9rem;">Carrinho</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Pagamento PIX</a>
+          <a class="nav-link active fw-bold px-3 text-uppercase text-primary" aria-current="page" href="#" style="font-size: 0.9rem;">Pagamento PIX</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div class="container mt-4">
-  <h1 class="mb-4">Pagamento PIX</h1>
+<div class="container mt-5 pt-5 pb-5 flex-grow-1">
+  <h1 class="fw-extrabold mb-4 text-dark text-uppercase text-center" style="letter-spacing: -1px;">Pagamento via <span class="text-primary">PIX</span></h1>
   <div class="row">
-    <div class="col-lg-8 offset-lg-2">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Pague com PIX</h5>
-          <p class="card-text">Utilize o QR Code abaixo para realizar o pagamento.</p>
-          <div class="text-center">
-            <img src="./image/QR_Code.png" alt="QR Code para pagamento via PIX" class="img-fluid" style="max-width: 150px;">
+    <div class="col-lg-6 offset-lg-3">
+      <div class="card border-0 shadow-lg" style="border-radius: 20px; overflow: hidden;">
+        <div class="card-body p-5 text-center">
+          <h5 class="card-title fw-bold mb-3">Finalize sua compra</h5>
+          <p class="card-text text-muted mb-4">Escaneie o código com o aplicativo do seu banco para pagar instantaneamente.</p>
+          <div class="text-center p-3 bg-white d-inline-block shadow-sm mb-4" style="border-radius: 15px;">
+            <img src="./image/QR_Code.png" alt="QR Code para pagamento via PIX" class="img-fluid" style="max-width: 180px;">
           </div>
-          <p class="mt-3">Ou copie o código PIX abaixo:</p>
+          <p class="text-muted small fw-bold text-uppercase" style="letter-spacing: 1px;">Ou use o "Copia e Cola":</p>
           <div class="input-group mb-3">
-            <input type="text" class="form-control" value="Código PIX aqui" id="pixCode" readonly>
-            <button class="btn btn-outline-secondary" type="button" id="copyPixCodeBtn">Copiar</button>
+            <input type="text" class="form-control form-control-lg bg-light border-0 shadow-none" value="00020126580014BR.GOV.BCB.PIX0136footcoder-pix-pagamento-exemplo-2024" id="pixCode" readonly style="border-radius: 12px 0 0 12px; font-size: 0.85rem;">
+            <button class="btn btn-primary fw-bold px-4" type="button" id="copyPixCodeBtn" style="border-radius: 0 12px 12px 0;">Copiar</button>
           </div>
         </div>
       </div>
@@ -60,35 +60,26 @@
 </div>
 
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-  <div id="copyToast" class="toast align-items-center text-white bg-primary border-0" role="alert" aria-live="assertive" aria-atomic="true">
+  <div id="copyToast" class="toast align-items-center text-white bg-dark border-0 shadow-lg" role="alert" aria-live="assertive" aria-atomic="true" style="border-radius: 12px;">
     <div class="d-flex">
-      <div class="toast-body">
-        Código PIX copiado!
+      <div class="toast-body fw-bold">
+        ✅ Código PIX copiado com sucesso!
       </div>
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
   </div>
 </div>
 
-<footer class="footer mt-auto py-3">
+<footer class="bg-dark text-white py-5 mt-auto" style="border-top: 5px solid #0d6efd;">
   <div class="container text-center">
-    <span class="text-muted">© 2024 FootCoder</span>
+    <span class="text-secondary small fw-bold text-uppercase" style="letter-spacing: 1px;">&copy; <script>document.write(new Date().getFullYear())</script> FootCoder. Todos os direitos reservados.</span>
   </div>
 </footer>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-<script>
-  document.getElementById('copyPixCodeBtn').addEventListener('click', function() {
-    const pixCodeInput = document.getElementById('pixCode');
-    pixCodeInput.select();
-    pixCodeInput.setSelectionRange(0, 99999); // Para dispositivos móveis
-    document.execCommand('copy');
-    
-    const toast = new bootstrap.Toast(document.getElementById('copyToast'));
-    toast.show();
-  });
+<script src ="./js/pix.js">
 </script>
 </body>
 </html>
