--- a/pagamento_cartao_credito.html
+++ b/pagamento_cartao_credito.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link fw-medium px-3" href="index.html">Home</a>
+          <a class="nav-link fw-medium px-3" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link fw-medium px-3" href="produtos.html">Camisetas</a>
@@ -91,16 +91,7 @@
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-<script>
-  document.getElementById('paymentForm').addEventListener('submit', function(event) {
-    event.preventDefault();
-    
-    // Simulando o processamento do pagamento
-    setTimeout(function() {
-      const toast = new bootstrap.Toast(document.getElementById('paymentToast'));
-      toast.show();
-    }, 800);
-  });
+<script src ="./js/credito.js">
 </script>
 </body>
 </html>
