--- a/pagamento_cartao_debito.html
+++ b/pagamento_cartao_debito.html
@@ -10,58 +10,61 @@
   <link href="./css/styles.css" rel="stylesheet">
   <link rel="shortcut icon" href="./image/camisa.gif" type="image/x-icon">
 </head>
-<body>
+<body class="bg-secondary bg-opacity-10 d-flex flex-column min-vh-100" style="font-family: 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;">
 
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">FootCoder</a>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top shadow-sm py-3" style="border-bottom: 3px solid #0d6efd;">
+  <div class="container-fluid px-4">
+    <a class="navbar-brand fw-bold fs-3 tracking-tight" href="index.html" style="letter-spacing: -1.5px; text-transform: uppercase;">Foot<span class="text-primary">Coder</span></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link" href="index.html">Home</a>
+          <a class="nav-link fw-bold px-3 text-uppercase" href="index.html" style="font-size: 0.9rem;">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="produtos.html">Camisetas</a>
+          <a class="nav-link fw-bold px-3 text-uppercase" href="produtos.html" style="font-size: 0.9rem;">Camisetas</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="carrinho.html">Carrinho</a>
+          <a class="nav-link fw-bold px-3 text-uppercase" href="carrinho.html" style="font-size: 0.9rem;">Carrinho</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Pagamento com Cartão de Débito</a>
+          <a class="nav-link active fw-bold px-3 text-uppercase text-primary" aria-current="page" href="#" style="font-size: 0.9rem;">Pagamento com Cartão de Débito</a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div class="container mt-4">
-  <h1 class="mb-4">Pagamento com Cartão de Débito</h1>
-  <div class="row">
-    <div class="col-lg-8 offset-lg-2">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Insira os dados do seu cartão de débito</h5>
+<div class="container flex-grow-1 d-flex align-items-center justify-content-center mt-5 pt-4 pb-5">
+  <h1 class="visually-hidden">Pagamento com Cartão de Débito</h1>
+  <div class="row w-100 justify-content-center">
+    <div class="col-lg-5 col-md-8 offset-lg-0">
+      <div class="card border-0 shadow-lg p-2" style="border-radius: 20px; background: #ffffff;">
+        <div class="card-body p-4 p-md-5">
+          <h5 class="card-title fw-bold mb-1 text-center fs-3">Pagamento</h5>
+          <p class="text-muted text-center mb-4 small">Informe os dados do seu cartão de débito para finalizar</p>
           <form id="paymentForm">
             <div class="mb-3">
-              <label for="cardNumber" class="form-label">Número do Cartão</label>
-              <input type="text" class="form-control" id="cardNumber" placeholder="1234 5678 9012 3456" required>
+              <label for="cardNumber" class="form-label fw-bold text-dark small text-uppercase" style="letter-spacing: 0.5px;">Número do Cartão</label>
+              <input type="text" class="form-control form-control-lg border-2 bg-light shadow-none" id="cardNumber" placeholder="0000 0000 0000 0000" required style="border-radius: 12px; font-size: 0.95rem;">
             </div>
             <div class="mb-3">
-              <label for="cardName" class="form-label">Nome no Cartão</label>
-              <input type="text" class="form-control" id="cardName" placeholder="Nome Completo" required>
+              <label for="cardName" class="form-label fw-bold text-dark small text-uppercase" style="letter-spacing: 0.5px;">Nome impresso no cartão</label>
+              <input type="text" class="form-control form-control-lg border-2 bg-light shadow-none" id="cardName" placeholder="NOME DO TITULAR" required style="border-radius: 12px; font-size: 0.95rem;">
             </div>
-            <div class="mb-3">
-              <label for="expiryDate" class="form-label">Data de Validade</label>
-              <input type="text" class="form-control" id="expiryDate" placeholder="MM/AA" required>
+            <div class="row mb-4">
+              <div class="col-6">
+                <label for="expiryDate" class="form-label fw-bold text-dark small text-uppercase" style="letter-spacing: 0.5px;">Validade</label>
+                <input type="text" class="form-control form-control-lg border-2 bg-light shadow-none" id="expiryDate" placeholder="MM/AA" required style="border-radius: 12px; font-size: 0.95rem;">
+              </div>
+              <div class="col-6">
+                <label for="cvv" class="form-label fw-bold text-dark small text-uppercase" style="letter-spacing: 0.5px;">CVV</label>
+                <input type="text" class="form-control form-control-lg border-2 bg-light shadow-none" id="cvv" placeholder="000" required style="border-radius: 12px; font-size: 0.95rem;">
+              </div>
             </div>
-            <div class="mb-3">
-              <label for="cvv" class="form-label">CVV</label>
-              <input type="text" class="form-control" id="cvv" placeholder="123" required>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Confirmar Pagamento</button>
+            <button type="submit" class="btn btn-primary btn-lg w-100 fw-bold py-3 shadow rounded-3 border-0 text-uppercase" style="letter-spacing: 1px; font-size: 0.9rem;">Confirmar Pagamento</button>
           </form>
         </div>
       </div>
@@ -70,35 +73,25 @@
 </div>
 
 <div class="position-fixed bottom-0 end-0 p-3" style="z-index: 11">
-  <div id="paymentToast" class="toast align-items-center text-white bg-success border-0" role="alert" aria-live="assertive" aria-atomic="true">
-    <div class="d-flex">
-      <div class="toast-body">
-        Pagamento realizado com sucesso!
+  <div id="paymentToast" class="toast align-items-center text-white bg-success border-0 shadow-lg" role="alert" aria-live="assertive" aria-atomic="true" style="border-radius: 12px;">
+    <div class="d-flex p-2">
+      <div class="toast-body fw-bold">
+        ✅ Pagamento realizado com sucesso!
       </div>
       <button type="button" class="btn-close btn-close-white me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
     </div>
   </div>
 </div>
 
-<footer class="footer mt-auto py-3">
+<footer class="bg-dark text-white py-5 mt-auto" style="border-top: 5px solid #0d6efd;">
   <div class="container text-center">
-    <span class="text-muted">© 2024 FootCoder</span>
+    <span class="text-secondary small fw-bold text-uppercase" style="letter-spacing: 1px;">&copy; <script>document.write(new Date().getFullYear())</script> FootCoder. Todos os direitos reservados.</span>
   </div>
 </footer>
 
 <!-- Bootstrap JS -->
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
-<script>
-  document.getElementById('paymentForm').addEventListener('submit', function(event) {
-    event.preventDefault();
-    
-    // Simulando o processamento do pagamento
-    setTimeout(function() {
-      const toast = new bootstrap.Toast(document.getElementById('paymentToast'));
-      toast.show();
-    }, 1000);
-  });
-</script>
+<script src ="./js/debito.js"></script>
 </body>
 </html>
