feat: estilização profissional da página de boleto e refatoração da lógica para arquivo externo

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link active fw-bold px-3 text-uppercase" aria-current="page" href="#" style="font-size: 0.9rem;">Home</a>
+          <a class="nav-link active fw-bold px-3 text-uppercase" aria-current="page" href="#" style="font-size: 0.9rem;">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link fw-bold px-3 text-uppercase" href="./produtos.html" style="font-size: 0.9rem;">Camisetas</a>
