--- a/produtos.html
+++ b/produtos.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ms-auto">
         <li class="nav-item">
-          <a class="nav-link fw-medium px-3" href="index.html">Home</a>
+          <a class="nav-link fw-medium px-3" href="index.html">Inicio</a>
         </li>
         <li class="nav-item">
           <a class="nav-link active fw-medium px-3" aria-current="page" href="#">Camisetas</a>
